# dengue-Powerlaw

./: .gitignore  README.md  _mun_by_geocode.py  aggregate_city_stats.py  benchmark_optimization.py  check_episcanner.py  check_years.py  dashboard.py  data_utils.py  fit_episcanner_pl.py  fitpl.py  generate_report.py  main.py  polar.ipynb  powerlaw_results.db  predictive_model.py  profile_dashboard.py  pyproject.toml  repro_bug.py  repro_keyerror.py  test_fix_v2.py  test_gradio_interaction.py  test_state_ts.py  verify_fitpl.py  verify_training.py  viz_utils.py
Manuscript/: main.tex  refs.bib
parquet_cache/: city_stats.parquet  episcanner_fits.parquet
tests/: test_data_utils.py  test_episcanner.py  test_episcanner_years.py  test_fitpl.py  test_merge_logic.py  test_predictive_model.py  test_state_timeseries.py  test_viz_utils.py  test_yearly_fit.py
