[project]
name = "powerlaw-est"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "gradio>=6.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mosqlient>=1.9.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "powerlaw>=2.0.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
