[project]
name = "powerlaw-est"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "gradio>=6.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mosqlient>=1.9.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "powerlaw>=2.0.0",
    "pyarrow>=22.0.0",
    "pygeoda>=0.1.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.0",
    "pytest>=9.0.2",
]
